<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SGSports</string>
    <string name="facebook_app_id">142781360285746</string>
    <string name="facebook_application_id" translatable="false">142781360285746</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb142781360285746</string>

    <string name="signup">sign up</string>
    <string name="signin">sign in</string>
    <string name="signinGoogle">sign in with Google</string>
    <string name="signinFB">sign in with Facebook</string>

    <string name="email">email</string>
    <string name="username">username</string>
    <string name="pw">password</string>
    <string name="confirmpw">confirm password</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
    <string name="mobileNum">mobile number</string>

    <string name="userdata">user data</string>


    <string name="hello">Hello,</string>
    <string name="name">Name</string>
    <string name="view_profile">View Profile</string>
    <string name="name_name">Name: {{name}}</string>
    <string name="age_age">Age: {{age}}</string>
    <string name="gender_gender">Gender: {{gender}}</string>
    <string name="mobile_no_mobile">Mobile no: {{mobile}}</string>
    <string name="email_email">Email: {{email}}</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="update_profile">Update Profile</string>
    <string name="map_key" translatable="false">AIzaSyBPP00BVTlJjkx0GqSIhlzExy8VHLq-1gE</string>
    <string name="Search_Facilities">SEARCH FACILITIES </string>


    <string-array name = "facilities_type">
        <item>Swimming Pool</item>
        <item>Gym</item>
    </string-array>

    <string-array name = "distance">
        <item>Far</item>
        <item>Near</item>
    </string-array>

    <string-array name = "rating">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
