<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:id="@+id/createFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_gravity="center"
            android:id="@+id/newUserEmail"
            android:hint="@string/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_gravity="center"
            android:id="@+id/newUsername"
            android:hint="@string/username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_gravity="center"
            android:id="@+id/newUserPW"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_gravity="center"
            android:id="@+id/confirmPW"
            android:hint="@string/confirmpw"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>
        <RadioGroup
            android:id="@+id/genderSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/femaleR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"/>
        <Spinner
            android:id="@+id/ageSpinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_gravity="center"
            android:id="@+id/mobileNum"
            android:hint="@string/mobileNum"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/signUpB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"/>

</LinearLayout>