<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@mipmap/icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:textColor="@color/textAccent"
        android:textSize="28sp"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="SGSPORTS"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <!-- Enter Email -->
        <EditText
            android:id="@+id/userEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email" />

        <!-- Enter Password -->
        <EditText
            android:id="@+id/userPW"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pw"
            android:inputType="textPassword" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/signinB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_button"
            android:text="@string/signin" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signupB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/round_button3"
            android:text="@string/signup" />

        <!-- Sign in with Google -->
        <Button
            android:id="@+id/googleB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/round_button3"
            android:text="@string/signinGoogle" />

    </LinearLayout>

</LinearLayout>